plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.runtime' version '1.13.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:33.0.0-jre'

    def os = org.gradle.internal.os.OperatingSystem.current()
    def platform = os.isWindows() ? 'windows' : os.isLinux() ? 'linux' : 'mac'
    implementation "org.openjfx:javafx-controls:21.0.7:${platform}"
    implementation "org.openjfx:javafx-fxml:21.0.7:${platform}"
}

javafx {
    version = "21.0.7"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'org.App'
    applicationDefaultJvmArgs = [
        '--module-path', '/home/syahrul/javafx-sdk-21.0.7/lib',
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

runtime {
    modules = ['javafx.controls', 'javafx.fxml']

    jpackage {
        imageName = 'EstimasiKeuntungan'
        installerName = 'EstimasiKeuntungan'
        appVersion = '1.0.0'

        def os = org.gradle.internal.os.OperatingSystem.current()
        installerType = os.isWindows() ? 'exe' : 'deb'
        installerOptions = [
            '--vendor', 'Syahrul Software',
            '--icon', os.isWindows()
                ? 'src/main/resources/org/assets/icon.ico'
                : 'src/main/resources/estimasi-keuntungan.png'
        ]

        if (os.isWindows()) {
            installerOptions += [
                '--win-per-user-install',
                '--win-dir-chooser',
                '--win-menu',
                '--win-shortcut'
            ]
        } else if (os.isLinux()) {
            installerOptions += ['--linux-shortcut']
        }
    }
}
